weight 응용 - 위아래 밀어내기

--- a/UIPractice_210818/app/src/main/res/layout/activity_main.xml
+++ b/UIPractice_210818/app/src/main/res/layout/activity_main.xml
@@ -97,9 +97,28 @@
 
     </LinearLayout>
 
-    <Button
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="가입 확인" />
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="이전으로" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="가입 확인" />
+
+    </LinearLayout>
 
 </LinearLayout>
