--- a/LoginUIPractice_210818/app/src/main/res/layout/activity_main.xml
+++ b/LoginUIPractice_210818/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:text="아이디" />
 
     <EditText
+        android:id="@+id/emailedt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="이메일 양삭" />
@@ -69,6 +70,7 @@
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/loginBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="로그인"
