--- a/KotlinBasic_210819/app/src/main/res/layout/activity_main.xml
+++ b/KotlinBasic_210819/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,16 @@
         android:layout_height="wrap_content"
         android:text="로그 확인 버튼" />
 
+    <Button
+        android:id="@+id/toastBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="토스트 띄우기" />
+
+    <Button
+        android:id="@+id/toastBtn02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="토스트 띄우기 2번" />
+
 </LinearLayout>
