--- a/Intent_210819/app/src/main/res/layout/activity_main.xml
+++ b/Intent_210819/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/moveToOtherBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="화면 전환 버튼" />
