--- a/Intent_210819/app/src/main/res/layout/activity_other.xml
+++ b/Intent_210819/app/src/main/res/layout/activity_other.xml
@@ -18,6 +18,7 @@
         android:textSize="20sp" />
 
     <Button
+        android:id="@+id/returnToMainBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="이전 화면으로 돌아가기" />
