Intent.ACTION_DIAL 사용

--- a/Intent_210819/app/src/main/res/layout/activity_main.xml
+++ b/Intent_210819/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,23 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="연결할 전화번호"
+        android:layout_marginTop="1dp" />
+
+    <EditText
+        android:id="@+id/phoneNumEdt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="전화번호 입력"
+        android:inputType="phone" />
+
+    <Button
+        android:id="@+id/dialBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="전화 걸기 (Dial)" />
+
 </LinearLayout>
