using ACTION_CALL - emulator crashed

--- a/Intent_210819/app/src/main/res/layout/activity_main.xml
+++ b/Intent_210819/app/src/main/res/layout/activity_main.xml
@@ -77,4 +77,10 @@
         android:layout_height="wrap_content"
         android:text="전화 걸기 (Dial)" />
 
+    <Button
+        android:id="@+id/callBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="전화 걸기 (Call)" />
+
 </LinearLayout>
