--- a/ViewPager_210824/app/src/main/res/layout/fragment_birthyear.xml
+++ b/ViewPager_210824/app/src/main/res/layout/fragment_birthyear.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="안녕하세요"
+        android:text="1997"
         android:textSize="20sp" />
 
 </LinearLayout>
