Library 추가 - circleImageView, photoView

--- a/LibraryPractice_210824/app/src/main/res/layout/activity_view_photo.xml
+++ b/LibraryPractice_210824/app/src/main/res/layout/activity_view_photo.xml
@@ -13,4 +13,9 @@
         android:layout_height="match_parent"
         android:src="@drawable/nasa_logo" />
 
+    <com.github.chrisbanes.photoview.PhotoView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/nasa_logo" />
+
 </LinearLayout>
