Glide (Library) - 인터넷을 통해 이미지 주소로 이미지 불러옴

--- a/LibraryPractice_210824/app/src/main/res/layout/activity_main.xml
+++ b/LibraryPractice_210824/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,20 @@
             android:layout_height="wrap_content"
             android:text="전화 걸기" />
 
-
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최근 활동 사진"
+        android:layout_marginTop="20dp" />
+
+    <ImageView
+        android:id="@+id/recentImg"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
