--- a/PizzaOrderApp_210825/app/src/main/res/layout/fragment_pizza_store_list.xml
+++ b/PizzaOrderApp_210825/app/src/main/res/layout/fragment_pizza_store_list.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="피자가게 목록이 나오는 화면입니다." />
+
+</LinearLayout>
