--- a/PizzaOrderApp_210825/app/src/main/res/layout/fragment_pizza_store_list.xml
+++ b/PizzaOrderApp_210825/app/src/main/res/layout/fragment_pizza_store_list.xml
@@ -5,9 +5,8 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="피자가게 목록이 나오는 화면입니다." />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
