PizzaList 를 Fragment 에 띄우기

--- a/PizzaOrderApp_210825/app/src/main/res/layout/fragment_pizza_store_list.xml
+++ b/PizzaOrderApp_210825/app/src/main/res/layout/fragment_pizza_store_list.xml
@@ -6,7 +6,8 @@
     android:gravity="center">
 
     <ListView
+        android:id="@+id/pizzaStoreListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
