--- a/PizzaOrderApp_210825/app/src/main/res/layout/store_list_item.xml
+++ b/PizzaOrderApp_210825/app/src/main/res/layout/store_list_item.xml
@@ -13,12 +13,14 @@
         android:padding="10dp" >
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/logoImg"
         android:layout_width="40dp"
         android:layout_height="40dp"
         app:civ_border_width="2dp"
         android:src="@mipmap/ic_launcher" />
 
         <TextView
+            android:id="@+id/nameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="가게 이름 자리"
