--- a/PizzaOrderApp_210825/app/src/main/res/layout/activity_view_store_detail.xml
+++ b/PizzaOrderApp_210825/app/src/main/res/layout/activity_view_store_detail.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="30dp" />
 
     <TextView
+        android:id="@+id/nameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
@@ -49,6 +50,7 @@
         android:orientation="horizontal" >
 
         <TextView
+            android:id="@+id/phoneNumTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="실제 전화번호 자리"
@@ -60,6 +62,7 @@
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/dialBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="전화 주문" />
