--- a/PizzaOrderApp_210825/app/src/main/res/layout/activity_edit_nickname.xml
+++ b/PizzaOrderApp_210825/app/src/main/res/layout/activity_edit_nickname.xml
@@ -8,6 +8,7 @@
     android:padding="20dp"
     tools:context=".EditNicknameActivity">
 
+    <!-- 닉네임 변경하는 창 -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
