--- a/Colosseum_210903/app/src/main/res/layout/activity_sign_up.xml
+++ b/Colosseum_210903/app/src/main/res/layout/activity_sign_up.xml
@@ -13,15 +13,34 @@
         android:layout_height="wrap_content"
         android:text="이메일" />
 
-    <EditText
-        android:id="@+id/emailEdt"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="이메일 양식으로 입력"
-        android:inputType="textEmailAddress"/>
+        android:layout_height="wrap_content" >
 
+        <EditText
+            android:id="@+id/emailEdt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="이메일 양식으로 입력"
+            android:layout_weight="1"
+            android:inputType="textEmailAddress"/>
+
+        <Button
+            android:id="@+id/checkEmailBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="중복검사" />
+
+    </LinearLayout>
 
     <TextView
+        android:id="@+id/checkEmailResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="중복 검사를 해주세요." />
+
+    <TextView
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호" />
