--- a/Colosseum_210903/app/src/main/res/layout/activity_main.xml
+++ b/Colosseum_210903/app/src/main/res/layout/activity_main.xml
@@ -5,60 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:gravity="center"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="이메일" />
-
-    <EditText
-        android:id="@+id/emailEdt"
+    <ListView
+        android:id="@+id/topicListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="이메일 양식으로 입력"
-        android:inputType="textEmailAddress" />
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="비밀번호" />
-
-    <EditText
-        android:id="@+id/passwordEdt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="비밀번호 입력"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/signInBth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="로그인" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아직 계정이 없으신가요?" />
-
-        <Button
-            android:id="@+id/signUpBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="회원가입" />
-
-    </LinearLayout>
-
+<!--    <TextView-->
+<!--        android:id="@+id/userNicknameTxt"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="~~님 환영합니다."-->
+<!--        android:textSize="20sp"/>-->
 
 </LinearLayout>
