--- a/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
+++ b/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
@@ -17,11 +17,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/selectSideTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="(진영)" />
 
             <TextView
+                android:id="@+id/writerNickNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
@@ -33,6 +35,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/createdAtTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3일 전" />
@@ -46,6 +49,7 @@
             android:background="#DFDFDF" />
 
         <TextView
+            android:id="@+id/contentTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -64,6 +68,7 @@
             android:orientation="horizontal" >
 
             <TextView
+                android:id="@+id/replyCountTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="답글 ?개" />
@@ -74,11 +79,13 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/likeCountTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="좋아요 ?개" />
 
             <TextView
+                android:id="@+id/hateCountTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="싫어요 ?개" />
