--- a/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
+++ b/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:layout_marginLeft="5dp"
                 android:text="작성자 닉네임" />
 
             <TextView
@@ -65,6 +66,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal" >
 
             <TextView
