답글 btn 눌렀을때 색 바꾸기

--- a/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
+++ b/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
@@ -73,6 +73,8 @@
                 android:id="@+id/replyCountTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/black_border_rect"
+                android:padding="10dp"
                 android:text="답글 ?개" />
 
             <TextView
