--- a/Colosseum_210903/app/src/main/res/values/colors.xml
+++ b/Colosseum_210903/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="like_red">#DC6757</color>
+    <color name="hate_blue">#0B7DFD</color>
+    <color name="gray">#DFDFDF</color>
 </resources>
