--- a/Colosseum_210903/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/Colosseum_210903/app/src/main/res/layout/my_custom_action_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@color/white">
@@ -20,14 +21,35 @@
         android:layout_marginLeft="10dp"
         android:src="@drawable/back_arrow" />
 
-    <ImageView
-        android:id="@+id/notiBtn"
+    <FrameLayout
+        android:id="@+id/notiLayout"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/noti_icon"
-        android:visibility="gone"
-        android:padding="3dp" />
+        android:layout_marginRight="10dp">
+
+        <ImageView
+            android:id="@+id/notiBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/noti_icon"
+            android:padding="5dp" />
+
+        <TextView
+            android:id="@+id/notiCountTxt"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:text="3"
+            android:textSize="10sp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/red_circle" />
+
+    </FrameLayout>
 
 </FrameLayout>
