--- a/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
+++ b/Colosseum_210903/app/src/main/res/layout/reply_list_item.xml
@@ -17,13 +17,13 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/selectSideTxt"
+                android:id="@+id/selectedSideTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="(진영)" />
 
             <TextView
-                android:id="@+id/writerNickNameTxt"
+                android:id="@+id/writerNicknameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
