--- a/Colosseum_210903/app/src/main/res/layout/notification_list_item.xml
+++ b/Colosseum_210903/app/src/main/res/layout/notification_list_item.xml
@@ -8,13 +8,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/notiTitleTxt"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="알림 내용 자리" />
+
+        <TextView
+            android:id="@+id/createdAtTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="2021년 9월 8일 오후 3:05" />
 
     </LinearLayout>
 
