댓글 상세보기 화면에 댓글 갖고오기

--- a/Colosseum_210903/app/src/main/res/layout/activity_view_reply_detail.xml
+++ b/Colosseum_210903/app/src/main/res/layout/activity_view_reply_detail.xml
@@ -9,11 +9,13 @@
     tools:context=".ViewReplyDetailActivity">
 
     <TextView
+        android:id="@+id/sideAndNicknameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(진영) 작성자 닉네임" />
 
     <TextView
+        android:id="@+id/replyContentTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
