--- a/Colosseum_210903/app/src/main/res/layout/activity_view_reply_detail.xml
+++ b/Colosseum_210903/app/src/main/res/layout/activity_view_reply_detail.xml
@@ -35,12 +35,14 @@
         android:orientation="horizontal" >
 
         <EditText
+            android:id="@+id/contentEdt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="답글을 입력하세요."
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/okBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="답글 입력" />
