--- a/Colosseum_210903/app/src/main/res/layout/activity_view_reply_detail.xml
+++ b/Colosseum_210903/app/src/main/res/layout/activity_view_reply_detail.xml
@@ -23,6 +23,7 @@
         android:text="댓글 내용" />
 
     <ListView
+        android:id="@+id/childReplyListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
