답글에 달린 댓글의 좋아요/싫어요 표시

--- a/Colosseum_210903/app/src/main/res/values/colors.xml
+++ b/Colosseum_210903/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="like_red">#DC6757</color>
     <color name="hate_blue">#0B7DFD</color>
     <color name="gray">#DFDFDF</color>
+    <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
 </resources>
