--- a/Colosseum_210903/app/src/main/res/layout/child_reply_list_item.xml
+++ b/Colosseum_210903/app/src/main/res/layout/child_reply_list_item.xml
@@ -24,6 +24,31 @@
             android:layout_marginTop="5dp"
             android:text="답글 내용" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/likeCountTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/red_border_rect"
+                android:padding="10dp"
+                android:text="좋아요 ?개" />
+
+            <TextView
+                android:id="@+id/hateCountTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@drawable/blue_border_rect"
+                android:layout_marginLeft="10dp"
+                android:text="싫어요 ?개" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
