--- a/Colosseum_210903/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/Colosseum_210903/app/src/main/res/layout/my_custom_action_bar.xml
@@ -2,54 +2,74 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:layout_height="60dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="토론 앱"
-        android:layout_gravity="center"
         android:textColor="@color/black"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:layout_gravity="center"/>
 
     <ImageView
         android:id="@+id/backBtn"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center_vertical"
+        android:padding="10dp"
         android:layout_marginLeft="10dp"
         android:src="@drawable/back_arrow" />
 
-    <FrameLayout
-        android:id="@+id/notiLayout"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_gravity="right|center_vertical"
         android:layout_marginRight="10dp">
 
         <ImageView
-            android:id="@+id/notiBtn"
+            android:id="@+id/profileImg"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/noti_icon"
-            android:padding="5dp" />
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:src="@drawable/profile_icon"
+            android:layout_marginRight="5dp"/>
 
-        <TextView
-            android:id="@+id/notiCountTxt"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:text="3"
-            android:textSize="10sp"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:background="@drawable/red_circle" />
+        <FrameLayout
+            android:id="@+id/notiLayout"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_width="40dp"
+            android:layout_height="40dp">
 
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/notiBtn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/noti_icon"
+                android:padding="5dp"/>
+
+            <TextView
+                android:id="@+id/notiCountTxt"
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="4dp"
+                android:text="3"
+                android:textSize="10sp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:background="@drawable/red_circle"/>
+
+        </FrameLayout>
+
+
+    </LinearLayout>
+
+
 
 </FrameLayout>
