--- a/MyFinalProject_210910/app/src/main/res/layout/activity_login.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,7 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/kakaoLoginBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/kakaotalk_icon" />
