Facebook 으로 가입하기

--- a/MyFinalProject_210910/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_sign_up.xml
@@ -41,6 +41,7 @@
             android:text="비밀번호" />
 
         <EditText
+            android:id="@+id/pwEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="비밀번호를 입력하세요" />
