--- a/MyFinalProject_210910/app/src/main/res/layout/activity_login.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
             android:text="아이디" />
         
         <EditText
+            android:id="@+id/emailEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="이메일을 입력하세요" />
@@ -26,16 +27,19 @@
             android:text="비밀번호" />
         
         <EditText
+            android:id="@+id/pwEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="비밀번호를 입력하세요" />
 
         <Button
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="로그인" />
         
         <Button
+            android:id="@+id/goSignUpBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="회원가입" />
