--- a/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
@@ -85,7 +85,8 @@
 
         </LinearLayout>
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
