ListView 버튼 누르면 AppointmentData 들고 지도 화면으로 이동

--- a/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
@@ -88,7 +88,8 @@
         <fragment
             android:id="@+id/naverMapView"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
+            android:layout_height="250dp"
+            class="com.naver.maps.map.MapFragment"/>
 
         <Button
             android:id="@+id/okBtn"
