--- a/MyFinalProject_210910/app/src/main/res/layout/appointment_list_item.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/appointment_list_item.xml
@@ -43,6 +43,14 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/viewPlaceMapBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/map_marker_yellow" />
+
     </LinearLayout>
 
 </LinearLayout>
