지도 보기 화면에서 받아낸 약속 갖고 카메라 이동, 마커 찍어주기

--- a/MyFinalProject_210910/app/src/main/res/layout/activity_view_map.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_view_map.xml
@@ -8,5 +8,11 @@
         android:orientation="vertical"
         tools:context=".ViewMapActivity">
 
+        <fragment
+            android:id="@+id/naverMapFrag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.naver.maps.map.MapFragment" />
+
     </LinearLayout>
 </layout>
