RecyclerView Adapter 작성

--- a/MyFinalProject_210910/app/src/main/res/layout/activity_edit_my_place.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_edit_my_place.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="저장해줄 이름 입력"
-            android:singleLine="true" />
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,11 +28,11 @@
             android:text="위치 선택" />
 
         <fragment
-            android:id="@+id/map_view"
+            android:id="@+id/map_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginTop="5dp"
+            android:layout_weight="1"
             class="com.naver.maps.map.MapFragment" />
 
         <Button
