--- a/MyFinalProject_210910/app/src/main/res/layout/my_place_list_item.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/my_place_list_item.xml
@@ -4,6 +4,7 @@
     android:orientation="horizontal"
     android:padding="15dp"
     android:gravity="center_vertical"
+    android:id="@+id/backgroundLayout"
     android:layout_height="wrap_content">
 
     <TextView
