--- a/MyFinalProject_210910/app/src/main/res/layout/activity_main.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ListView
-                android:id="@+id/appointmentListView"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/appointmentRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
